# ELAs

./: CMakeLists.txt  README.md
include/: arquivo.h  busca.h  interface.h  ordenacao.h  profissional.h  relatorio.h  utils.h
src/: arquivo.c  busca.c  interface.c  main.c  ordenacao.c  profissional.c  relatorio.c  utils.c
